--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,6 @@
 data_path:
   input_path: ../data/pdf/WLAN 维护宝典（分销）.pdf
+#  input_path: ../data/pdf/01-08 故障处理 AC AP升级类问题.pdf.local
   index_path: ../data/index
   test_path: ../data/test_set/test_WLAN 维护宝典（分销）_retrieval_v1.txt
 
@@ -9,3 +10,8 @@ embedding:
 retrieval:
   top_k: 3
   fetch_k: 30
+
+elasticsearch:
+  url: http://localhost:9200
+  index_name: langchain-index
+  user_name: elastic
